--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.2.17",
-    "@angular/cli": "~12.1.2",
+    "@angular-devkit/build-angular": "12.1",
+    "@angular/cli": "12.1",
     "@angular/compiler-cli": "~12.1.2",
     "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~3.8.0",
@@ -72,6 +72,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "lite-server": "^2.6.1",
     "typescript": "~4.3.2"
   }
 }
