--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "rxjs": "~6.6.0",
     "save": "^2.5.0",
     "socicon": "^3.0.5",
+    "sweetalert2": "^11.7.3",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
